@@ -1,5 +1,5 @@
 #include <text.h>
-void kmain(void)
+void kmain(unsigned int k_size)
 {
   // Our stack is at 0x7000
   // init text system
